--- a/infografia2.html
+++ b/infografia2.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://metatags.io/" />
     <meta property="og:title" content="Arrendamento em Portugal" />
     <meta property="og:description" content=" Infografia referente a questão financeira do arrendamento em Portugal"/>
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="Título1.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
     <meta property="twitter:title" content="Arrendamento em Portugal" />
     <meta property="twitter:description" content="Infografia referente a questão financeira do arrendamento em Portugal" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="Título1.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
