A questão do arrendamento em Portugal.html
A infografia traz dados sobre o preço do arrendamento em diferentes sítios de Portugal.

--- a/infografia2.html
+++ b/infografia2.html
@@ -7,20 +7,20 @@
 
     <!-- Primary Meta Tags -->
     <title>Arrendamento em Portugal</title>
-    <meta name="title" content="Arrendamento em Portugal" />
+    <meta name="title" content="Arrendamento em Portugal: Uma questão crescente" />
     <meta name="description" content="Infografia referente a questão financeira do arrendamento em Portugal" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Arrendamento em Portugal" />
+    <meta property="og:title" content="Arrendamento em Portugal: uma questão crescente" />
     <meta property="og:description" content=" Infografia referente a questão financeira do arrendamento em Portugal"/>
     <meta property="og:image" content="Título1.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="Arrendamento em Portugal" />
+    <meta property="twitter:title" content="Arrendamento em Portugal: uma questão crescente" />
     <meta property="twitter:description" content="Infografia referente a questão financeira do arrendamento em Portugal" />
     <meta property="twitter:image" content="Título1.png" />
 
